--- a/src/main/resources/templates/tasks/task-form.html
+++ b/src/main/resources/templates/tasks/task-form.html
@@ -45,7 +45,7 @@
 	<input type="range" th:field="*{priority}" class="form-range mb-4" min="1" max="5" step="1">
 	
 	<h5>Category</h5>
-	<input type="range" th:field="*{category}" class="form-range mb-4" min="1" max="5" step="1">
+	<input type="number" th:field="*{category}" class="form-control mb-4 col-2">
 		
 	<!-- <input type="text" th:field="*{dueDate}"
 		class="form-control mb-4 col-4" placeholder="Due Date">	 -->
