--- a/src/main/resources/templates/categories/category-form.html
+++ b/src/main/resources/templates/categories/category-form.html
@@ -32,8 +32,17 @@
 	
 	<!--  <input type="text" th:field="*{priority}"
 		class="form-control mb-4 col-4" placeholder="Priority">	-->
+	<div th:if="${#strings.toString(taskOwner.prioritySelection)} == 'CategoryGrade'">
 	<h5>Priority</h5>
 	<input type="range" th:field="*{priority}" class="form-range mb-4" min="1" max="5" step="1">
+	</div>
+	
+	<div th:if="${#strings.toString(taskOwner.prioritySelection)} == 'CategoryPercent'">
+	<h5>Percentage</h5>
+	<input type="range" th:field="*{percentage}" class="form-range mb-4" min="1" max="100" step="7" oninput="num.value = this.value">
+	<output id="num">0</output>
+	</div>
+	
 	<br>
 		
 	<button type="submit" class="btn btn-info col-2">Save</button>	
