--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 <body>
 <div class="container-fluid text-center">
     <div>
-         <img class="img-fluid" src="https://api.freelogodesign.org/assets/thumb/logo/15046535_400.png?t=637885594730000000" />
+         <img class="img-fluid" src="https://urast-dev-ed--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&versionId=0685e000004foGJ&operationContext=CHATTER&contentId=05T5e00000Q30QC" />
     </div>
     <form th:action="@{/login}" method="post" style="max-width: 350px; margin: 0 auto;">
      
@@ -39,7 +39,7 @@
             </p>
         </div>
     </form>
-    <h4><a th:href="@{/register}">Click here to Register</a></h4>      
+    <h6><a th:href="@{/register}">Click here to Register</a></h6>      
 </div>
 </body>
 </html>
