--- a/src/main/resources/templates/register_success.html
+++ b/src/main/resources/templates/register_success.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="ISO-8859-1">
     <title>Registration Success</title>
-    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
+    <!--  <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
         crossorigin="anonymous" />
@@ -11,7 +11,32 @@
 <body>
     <div class="container text-center">
         <h3>You have signed up successfully!</h3>
-        <h4><a th:href="@{/login}">Click here to Login</a></h4>
+        <h4>Please login using your credentials</h4>
+        <!--  <h4><a th:href="@{/login}">Click here to Login</a></h4> -->
+        <form th:action="@{/login}" method="post" style="max-width: 350px; margin: 0 auto;">
+     
+        <div th:if="${param.error}">
+            <p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
+        </div>
+         
+        <div th:if="${param.logout}">
+            <p class="text-warning">You have been logged out.</p>
+        </div> 
+         
+        <div class="border border-secondary p-3 rounded">
+            <p>Access to Task Manager</p>
+            <p>
+                <input type="text" name="username" class="form-control" placeholder="User" required autofocus/>
+            </p>
+            <p>
+                <input type="password" name="password" class="form-control" placeholder="Password" required />
+            </p>
+
+            <p>
+                <input type="submit" value="Login" class="btn btn-primary" />
+            </p>
+        </div>
+    </form>
     </div>
      
 </body>
