--- a/src/main/resources/templates/task-owners/owner-preferences.html
+++ b/src/main/resources/templates/task-owners/owner-preferences.html
@@ -46,7 +46,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	 <h5>Priority Selection Section</h5>
 	     <!-- <div class="col-md-5"> -->
 	    <!--   <div th:if="sortSelection != null }">-->
-	         <select class="form-control mb-4 col-4"  th:field="*{prioritySelection}">
+	         <select class="form-control mb-4 col-6"  th:field="*{prioritySelection}">
 	             <option th:each="dropDownItem : ${sortSelection}"
 	                             th:value="${dropDownItem}"
 	                             th:text="${dropDownItem}" />
@@ -112,6 +112,9 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 		
 
 </div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
