--- a/src/main/resources/templates/tasks/list-tasks.html
+++ b/src/main/resources/templates/tasks/list-tasks.html
@@ -63,12 +63,12 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 		<thead class="thead-dark">
 			<tr>
 				<th>Title</th>
-				<th>Description</th>
-				<th>Created Date</th>
+				<!--  <th>Description</th>-->
+				<!--  <th>Created Date</th>  -->
 				<th>Due Date</th>
 				<th th:if="${!displayCategories}">Priority</th>
 				<th th:if="${displayCategories}">Category</th>
-				<th>Completed</th>
+				<!--  <th>Completed</th> -->
 				<th>Action</th>
 			</tr>
 		</thead>
@@ -77,12 +77,12 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 			<tr th:each="tempTask : ${tasks}">
 			
 				<td th:text="${tempTask.title}" />	
-				<td class="wrappedDescription" th:text="${tempTask.description}" />	
-				<td th:text="${tempTask.createdDate}" />
-				<td th:text="${tempTask.dueDate}" />
+				<!--<td class="wrappedDescription" th:text="${tempTask.description}" />	-->
+				<!-- <td th:text="${tempTask.createdDate}" /> -->
+				<td th:classappend="${tempTask.dueDate < today} ? highlight : testclass" th:text="${tempTask.dueDate}" />
 				<td th:if="${!displayCategories}" th:text="${tempTask.priority}" /> 
 				<td th:if="${displayCategories}" th:text="${tempTask.category.name}" />  
-				<td th:text="${tempTask.completed}" />	
+				<!-- <td th:text="${tempTask.completed}" />	-->
 				
 				<!-- Add update button/link -->
 				<td>
@@ -94,6 +94,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 					<a th:href="@{/tasks/delete(taskId=${tempTask.id})}"
 						class="btn btn-danger btn-sm"
 						onclick="if (!(confirm('Are you sure you want to delete this task?'))) return false">Delete</a>	
+			
 				</td>
 				
 			</tr>
@@ -103,6 +104,9 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	
 </div>
 	
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
 
