--- a/src/main/resources/templates/tasks/task-form.html
+++ b/src/main/resources/templates/tasks/task-form.html
@@ -35,26 +35,26 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	<input type="hidden" th:field="*{createdDate}" />
 			
 	<input type="text" th:field="*{title}"
-		class="form-control mb-4 col-4" placeholder="Title">
+		class="form-control mb-4 col-6" placeholder="Title">
 	<!-- Example of test area 
 	<input type="text" th:field="*{description}"
 		class="form-control mb-4 col-4" placeholder="Description">
 		-->
 		
 	<!-- Example of test area -->
-	<textarea th:field="*{description}" class="form-control mb-4 col-6" placeholder="Description" rows="3"></textarea>		
+	<textarea th:field="*{description}" class="form-control mb-4 col-10" placeholder="Description" rows="4"></textarea>		
 	
 	<!--  <input type="text" th:field="*{priority}"
 		class="form-control mb-4 col-4" placeholder="Priority">	-->
 	<div th:if="${!displayCategories}">
 	<h5>Priority</h5>
-	<input type="range" th:field="*{priority}" class="form-range mb-4" min="1" max="5" step="1">
+	<input type="range" th:field="*{priority}" class="form-range mb-6" min="1" max="5" step="1">
 	</div>
 	
 	<div th:if="${displayCategories}">
 	<h5>Category</h5>
 	<!--  <input type="number" th:field="*{category}" class="form-control mb-4 col-2"> -->
-	<select class="form-control mb-4 col-4"  th:field="*{category}">
+	<select class="form-control mb-4 col-6"  th:field="*{category}">
 	             <option th:each="entry : ${sortSelection}"
 	                             th:value="${entry.getId()}"
 	                             th:text="${entry.getName()}" >
@@ -66,7 +66,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	<!-- <input type="text" th:field="*{dueDate}"
 		class="form-control mb-4 col-4" placeholder="Due Date">	 -->
 	
-	<input type="date" th:field="*{dueDate}" class="form-control mb-4 col-4"
+	<input type="date" th:field="*{dueDate}" class="form-control mb-4 col-6"
        placeholder="Due Date">
     <h5>Completed?</h5>
     <input class="form-control mb-4 col-1" type="checkbox" th:field="*{completed}">
@@ -80,6 +80,9 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	<a th:href="@{/tasks/list}">Back to Task List</a>
 </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
