Updated application and format

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 <body>
 <div class="container-fluid text-center">
     <div>
-         <img class="img-fluid" src="https://urast-dev-ed--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&versionId=0685e000004foGJ&operationContext=CHATTER&contentId=05T5e00000Q30QC" />
+         <img class="img-fluid" th:src="@{/img/logo.png}" />
     </div>
     <form th:action="@{/login}" method="post" style="max-width: 350px; margin: 0 auto;">
      
