--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -18,7 +18,7 @@
 
 <!-- New body -->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
   <a class="navbar-brand" href="/">Task Management</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -29,7 +29,7 @@
         <a class="nav-link" href="/">My Tasks <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/owner/showOwnerPreferences(ownerId=${taskOwner.id})}">Options</a>
+        <a class="nav-link" th:href="@{/owner/showOwnerPreferences(ownerId=${taskOwner.id})}">Settings</a>
       </li>
       </ul>
       <ul class="nav navbar-nav ml-auto">
