--- a/src/main/resources/templates/tasks/task-form.html
+++ b/src/main/resources/templates/tasks/task-form.html
@@ -65,7 +65,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 		
 	<!-- <input type="text" th:field="*{dueDate}"
 		class="form-control mb-4 col-4" placeholder="Due Date">	 -->
-	
+	<h5>Due Date</h5>
 	<input type="date" th:field="*{dueDate}" class="form-control mb-4 col-6"
        placeholder="Due Date">
     <h5>Completed?</h5>
