--- a/src/main/resources/templates/task-owners/owner-preferences.html
+++ b/src/main/resources/templates/task-owners/owner-preferences.html
@@ -18,10 +18,10 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <body>
 <div th:if="${taskOwner.id == authOwner.id}">
 <div class="container">
-	<h3>Task Management Owner</h3>
+	<h3>My Preferences</h3>
 	<hr>
 	
-	<p class="h4 mb-4"> Save Preferences </p>
+	<p class="h4 mb-4"> My Information </p>
 	<form action ="#" th:action="@{/owner/save}"
 			th:object="${taskOwner}" method="POST">
 	
@@ -30,8 +30,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	<!-- Add hidden form field to handle update -->
 	<input type="hidden" th:field="*{email}" />
 	<!-- Add hidden form field to handle update -->
-	<input type="hidden" th:field="*{user.id}" />
-			
+	<input type="hidden" th:field="*{user.id}" />	
 	<input type="text" th:field="*{firstName}"
 		class="form-control mb-4 col-4" placeholder="First Name">
 	<input type="text" th:field="*{lastName}"
@@ -43,7 +42,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 		class="form-control mb-4 col-4" placeholder="Priority Selection"> -->
 	
 	<div class="form-group">
-	 <h5>Priority Selection Section</h5>
+	 <h5>Priority Selection</h5>
 	     <!-- <div class="col-md-5"> -->
 	    <!--   <div th:if="sortSelection != null }">-->
 	         <select class="form-control mb-4 col-6"  th:field="*{prioritySelection}">
@@ -65,12 +64,15 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	<!--  <input type="range" th:field="*{category}" class="form-range mb-4" min="1" max="5" step="1">-->
 	
 	<!-- Adding button to add categories -->
+	<div th:if="${#strings.toString(taskOwner.prioritySelection)} != 'CategoryPercent' or ${categoryPercent} < 99">
 	<a th:href="@{/categories/showFormForAdd}"
 		class="btn btn-primary btn-sm mb-3">
 		Add Category
 	</a>
+	</div>
+	
 	<div th:if="${#strings.toString(taskOwner.prioritySelection)} == 'CategoryPercent'">
-	<p>Current Percent: [[${categoryPercent}]]</p>
+	<p>Current Percent: [[${categoryPercent}]] %</p>
 	</div>
 		<table class="table table-bordered table-striped">
 		<thead class="thead-dark">
@@ -87,15 +89,15 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 			
 				<td th:text="${tempCat.name}" />	
 				<td th:if="${#strings.toString(taskOwner.prioritySelection)} == 'CategoryGrade'" th:text="${tempCat.priority}" />
-				<td th:if="${#strings.toString(taskOwner.prioritySelection)} == 'CategoryPercent'" th:text="${tempCat.percentage}" />
+				<td th:if="${#strings.toString(taskOwner.prioritySelection)} == 'CategoryPercent'" th:text="${tempCat.percentage} + ' %'" />
 				
 				<!-- Add update button/link -->
 				<td>
 					<a th:href="@{/categories/showFormForUpdate(categoryId=${tempCat.id})}"
-						class="btn btn-info btn-sm">View</a>
-					<a th:href="@{/categories/delete(categoryId=${tempCat.id})}"
+						class="btn btn-info btn-sm">View</a>	
+					<!--  <a th:href="@{/categories/delete(categoryId=${tempCat.id})}"
 						class="btn btn-danger btn-sm"
-						onclick="if (!(confirm('Are you sure you want to delete this category?'))) return false">Delete</a>	
+						onclick="if (!(confirm('Are you sure you want to delete this category?'))) return false">Delete</a>	-->
 				</td>
 				
 			</tr>
