--- a/src/main/resources/templates/tasks/list-tasks.html
+++ b/src/main/resources/templates/tasks/list-tasks.html
@@ -64,12 +64,12 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 				<!-- Add update button/link -->
 				<td>
 					<a th:href="@{/tasks/showFormForUpdate(taskId=${tempTask.id})}"
-						class="btn btn-info btn-sm">View</a>
+						class="btn btn-info btn-sm mb-2">View</a>
 					<a th:href="@{/tasks/complete(taskId=${tempTask.id})}"
-						class="btn btn-success btn-sm"
+						class="btn btn-success btn-sm mb-2"
 						onclick="if (!(confirm('Are you sure you want to complete this task?'))) return false">Complete</a>	
 					<a th:href="@{/tasks/delete(taskId=${tempTask.id})}"
-						class="btn btn-danger btn-sm"
+						class="btn btn-danger btn-sm mb-2"
 						onclick="if (!(confirm('Are you sure you want to delete this task?'))) return false">Delete</a>	
 			
 				</td>
